word wrap fixed

--- a/src/scss/pages/_product.scss
+++ b/src/scss/pages/_product.scss
@@ -720,6 +720,7 @@
 
     &_active {
       display: block;
+      word-break: break-word;
     }
   }
 }
